--- a/resources/style.css
+++ b/resources/style.css
@@ -5,8 +5,16 @@
 }
 
 body {
-	width: auto;
 	font-family: "Courier New", Courier, monospace;
+	width: auto;
+	height: 100vh;
+	position: relative;
+	overflow: hidden;
+	scroll-behavior: smooth;
+}
+
+section {
+	height: 100%;
 }
 
 ::-webkit-scrollbar {
@@ -27,10 +35,10 @@ header {
 	height: 70px;
 	padding: 15px 36px;
 
-	position: fixed;
+	/* position: fixed;
 	left: 0;
 	top: 0;
-	z-index: 99;
+	z-index: 99; */
 }
 .logo {
 	width: 40px;
@@ -44,16 +52,16 @@ header {
 
 .mainContainer {
 	/* padding: 20px; */
-	min-height: calc(100vh - 110px);
+	/* min-height: calc(100vh - 110px); */
 	/* height: 1122.519685px; */
 	max-width: 793.7007874px;
 	width: 100%;
-	/* background-color: #e0dd1b; */
-	background-color: #fff;
+	height: 100%;
+	padding: 10px;
+	padding-bottom: 150px;
 	background: repeating-conic-gradient(#ccc 0% 25%, #fff 0% 50%) 50% / 20px 20px;
 	position: relative;
-	top: 70px;
-	overflow: hidden;
+	overflow-y: scroll;
 }
 
 .mainContainer::before {
@@ -132,8 +140,6 @@ header {
 	0% {
 		opacity: 0.5;
 		transform: scale(1.2);
-		/* background-position: 0 0, 0 50%, 0 100%, 50% 100%, 100% 100%, 100% 50%,
-			100% 0, 50% 0, 50% 50%; */
 	}
 
 	50% {
@@ -144,8 +150,6 @@ header {
 	100% {
 		opacity: 0.5;
 		transform: scale(1.2);
-		/* background-position: 0 50%, 0 100%, 50% 100%, 100% 100%, 100% 50%, 100% 0,
-			50% 0, 0 0, 50% 50%; */
 	}
 }
 
@@ -164,10 +168,14 @@ header {
 }
 
 .imgContainer {
+	min-height: 100%;
+	width: 100%;
 	display: grid;
 	grid-template-columns: repeat(auto-fill, 110px);
+	grid-template-rows: max-content;
+	align-content: start;
 	gap: 20px;
-	padding: 10px;
+	break-inside: avoid-page;
 }
 
 .img {
@@ -176,6 +184,7 @@ header {
 	width: 100%;
 	height: auto;
 	border: 3px solid #333;
+	break-inside: avoid-page;
 }
 
 .utilityBox {
@@ -256,34 +265,34 @@ footer {
 	color: inherit;
 }
 
-/* Hide everything except #content when printing */
 @media print {
+	body {
+		background: repeating-conic-gradient(#ccc 0% 25%, #fff 0% 50%) 50% / 20px
+			20px;
+	}
+
 	body * {
 		visibility: hidden;
 	}
 
 	.mainContainer,
 	.mainContainer * {
-		visibility: visible;
-		/* background: #fff; */
+		visibility: visible !important;
 	}
 
 	.mainContainer {
-		position: absolute !important;
-		left: 0 !important;
-		top: 0 !important;
-		margin: 0 !important;
+		background: none;
+		padding: 0px !important;
+		overflow: visible !important;
 	}
 
-	.mainContainer::before {
-		content: none;
+	.utilityBox,
+	header,
+	footer {
+		display: none !important;
 	}
-}
 
-#loader {
-	display: none;
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	background-color: aquamarine;
+	@page {
+		padding: 15px;
+	}
 }
