--- a/resources/style.css
+++ b/resources/style.css
@@ -1,14 +1,35 @@
+/* ================================General================================= */
 * {
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
 }
 
+html {
+	font-size: 62.5%;
+}
+
+::-webkit-scrollbar {
+	width: 0;
+	height: 0;
+}
+
+::selection {
+	color: #eee !important;
+}
+
 body {
-	font-family: "Courier New", Courier, monospace;
+	font-family: "Poppins", sans-serif;
+	font-weight: 300;
+	font-size: 1.6rem;
+	color: #f5f5f5;
 	width: auto;
 	height: 100vh;
+	background: repeating-linear-gradient(to right, #999797 10%, #596572 20%);
+	background: linear-gradient(135deg, #1e1e2f, #2c3e50);
 	position: relative;
+	top: 0;
+	left: 0;
 	overflow: hidden;
 	scroll-behavior: smooth;
 }
@@ -17,95 +38,138 @@ section {
 	height: 100%;
 }
 
-::-webkit-scrollbar {
-	width: 0;
-	height: 0;
+.btn {
+	color: #fff;
+	background: #667eea;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	align-self: stretch;
+	padding: 0.8rem 1.2rem;
+	margin-top: 1rem;
+	border: none;
+	border-radius: 0.8rem;
+	cursor: pointer;
+	transition: all 0.3s ease;
 }
 
-header {
+.btn:hover {
+	background: #5a67d8;
+}
+
+/* ================================Header================================== */
+.header {
+	color: #eee;
+	background: linear-gradient(90deg, #667eea, #764ba2);
+	width: 100%;
+	height: 7rem;
+	padding: 1rem 2rem;
 	display: flex;
 	justify-content: start;
 	align-items: center;
 	gap: 1rem;
 
-	color: #eee;
-	background-color: #333333bb;
-	background-color: #333333;
-	width: 100%;
-	height: 70px;
-	padding: 15px 36px;
-
-	/* position: fixed;
-	left: 0;
+	position: relative;
 	top: 0;
-	z-index: 99; */
+	left: 0;
 }
 .logo {
-	width: 40px;
+	width: 4rem;
 	height: auto;
+	mix-blend-mode: color-dodge;
 }
 .primary-heading {
-	font-size: 24px;
+	font-size: 2.4rem;
 	letter-spacing: -0.5px;
-	word-spacing: -7px;
+	word-spacing: -0.7px;
 }
 
+.menuBtn {
+	display: none !important;
+}
+
+/* ================================MainContainer - DropBox================= */
 .mainContainer {
-	/* padding: 20px; */
-	/* min-height: calc(100vh - 110px); */
-	/* height: 1122.519685px; */
 	max-width: 793.7007874px;
 	width: 100%;
 	height: 100%;
-	padding: 10px;
-	padding-bottom: 150px;
-	background: repeating-conic-gradient(#ccc 0% 25%, #fff 0% 50%) 50% / 20px 20px;
+	background: #2a2a40;
+	padding: 1rem 1rem 15rem 1rem;
+	box-shadow: 0 2rem 2rem 1rem rgba(0, 0, 0, 0.2),
+		0px 4rem 4rem 4rem rgba(0, 0, 0, 0.2),
+		inset 0px 2rem 4rem rgba(0, 0, 0, 0.2);
 	position: relative;
+	overflow: hidden;
 	overflow-y: scroll;
 }
 
 .mainContainer::before {
 	display: none;
-	justify-content: center;
-	align-items: center;
-
+	width: 100%;
+	height: 100%;
+	background-color: #4f529ee9;
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100%;
-	height: 100%;
-
-	transition: all 1s;
-	justify-self: center;
-	align-self: center;
-	transform-origin: center;
 	z-index: 2;
-	transition: all 0.3s, box-shadow 0.3s ease;
+	transform-origin: center;
+	box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.5);
 	pointer-events: none;
+	transition: all 0.3s, box-shadow 0.3s ease;
 }
 
 .dragHover.mainContainer::before {
 	content: "";
-	display: flex;
-	background-color: #4f529ee9;
+	display: table;
 	pointer-events: none;
-	box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.5);
 	animation: fadeInOut 2s infinite;
 }
 
+/* ================================ImagesContainer========================= */
+.imgContainer {
+	min-height: 100%;
+	width: 100%;
+	display: grid;
+	grid-template-columns: repeat(auto-fill, 110px);
+	grid-template-rows: max-content;
+	align-content: start;
+	gap: 2rem;
+	break-inside: avoid-page;
+}
+
+.img {
+	display: inline-block;
+	/* width: 11rem; */
+	width: 100%;
+	height: auto;
+	border: 0.3rem solid #111;
+	backface-visibility: hidden;
+	break-inside: avoid-page;
+	cursor: pointer;
+	box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+	box-shadow: 0 0px 2rem rgba(255, 255, 255, 0.4);
+	transition: transform 0.2s;
+}
+
+.img:hover {
+	transform: scale(1.03);
+}
+
+/* ================================Page Download Loading=================== */
 .loader {
 	width: 100%;
 	height: 100%;
-	position: fixed;
-	top: 0;
-	left: 0;
+	background: #2a2a40;
+	background: linear-gradient(135deg, #667eea, #764ba2);
 	display: none;
 	justify-content: center;
 	align-items: center;
-	z-index: -1;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: -9;
 }
 
-.loader::before,
 .loader::after {
 	content: "";
 	position: absolute;
@@ -114,28 +178,100 @@ header {
 	/* GPU accelerated */
 }
 
-.loader::before {
-	width: 100%;
-	height: 100%;
-	background-color: #333;
-}
-
 .loader::after {
 	--c: no-repeat linear-gradient(#fff 0 0);
-	width: 95px;
-	height: 95px;
+	width: 9.5rem;
+	height: 9.5rem;
 	background: var(--c), var(--c), var(--c), var(--c), var(--c), var(--c),
 		var(--c), var(--c), var(--c);
-	background-size: 16px 16px;
-
-	animation: boxMoveing 1s infinite, fadeInOut 1s infinite;
+	background-size: 1.6rem 1.6rem;
+	animation: boxMoveing 1s infinite, fadeInOut 1s infinite !important;
 }
 
 .showLoader ~ .loader {
 	display: flex;
-	z-index: 999;
+	z-index: 9999;
 }
 
+/* ================================UtilityBox============================== */
+.utilityBox {
+	color: #eee;
+	background: #2a2a40;
+	min-width: min-content;
+	max-width: 32vw;
+	padding: 2.4rem;
+	border: 2px solid #eee;
+	border-radius: 1.2rem;
+	box-shadow: 0 0 2rem 1rem rgba(0, 0, 0, 0.2), 0 0 4rem 4rem rgba(0, 0, 0, 0.2),
+		inset 0 0 4rem rgba(0, 0, 0, 0.6);
+	hyphens: auto;
+
+	display: grid;
+	grid-template-columns: repeat(2, minmax(10rem, 30rem));
+	align-items: center;
+	gap: 1rem;
+
+	position: fixed;
+	top: 50%;
+	right: 3rem;
+	transform: translateY(-50%);
+	z-index: 99;
+}
+
+.utilityBox label:not(:first-child) {
+	margin-top: 1.4rem;
+}
+
+.utilityBox label,
+.utilityBox input {
+	grid-column: 1 / -1;
+	color: inherit;
+	width: 100%;
+	display: block;
+	border: none;
+	outline: none;
+}
+
+.utilityBox input[type="number"] {
+	color: #333;
+	background-color: #eee;
+	padding: 0.4rem 1.2rem;
+	border: 0.2rem solid #eee;
+	border-radius: 0.6rem;
+}
+
+/* ================================Footer================================== */
+.footer {
+	color: #eee;
+	background: #1e1e2f;
+	width: 100%;
+	height: 4rem;
+	padding: 1rem;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 1rem;
+
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	z-index: 9;
+}
+
+.aurthor a:link {
+	display: inline-block;
+	color: #9ae6b4;
+	backface-visibility: hidden;
+	transition: all 0.3s;
+}
+
+.aurthor a:hover {
+	color: #9ae6b5dc;
+	transform: translateY(-0.2rem) scale(1.05);
+}
+
+/* ================================Animations============================== */
 @keyframes fadeInOut {
 	0% {
 		opacity: 0.5;
@@ -167,112 +303,15 @@ header {
 	}
 }
 
-.imgContainer {
-	min-height: 100%;
-	width: 100%;
-	display: grid;
-	grid-template-columns: repeat(auto-fill, 110px);
-	grid-template-rows: max-content;
-	align-content: start;
-	gap: 20px;
-	break-inside: avoid-page;
-}
-
-.img {
-	display: inline-block;
-	/* width: 110px; */
-	width: 100%;
-	height: auto;
-	border: 3px solid #333;
-	break-inside: avoid-page;
-}
-
-.utilityBox {
-	color: #eee;
-	min-width: min-content;
-	max-width: 30vw;
-	background-color: #33333386;
-	padding: 20px;
-	border-radius: 16px;
-	display: grid;
-	grid-template-columns: repeat(2, minmax(100px, 300px));
-	align-items: center;
-	gap: 15px;
-
-	position: fixed;
-	top: 80px;
-	right: 30px;
-	z-index: 99;
-	color: #eee;
-	word-wrap: nowrap;
-	hyphens: auto;
-}
-
-.utilityBox label {
-	font-size: 18px;
-}
-
-.utilityBox input {
-	color: inherit;
-	background-color: transparent;
-}
-
-.utilityBox label[for="fileInput"],
-.utilityBox input[type="file"] {
-	grid-column: 1 / -1;
-}
-
-.utilityBox input[type="number"] {
-	padding: 4px 12px;
-	border: 2px solid #eee;
-}
-
-.btn {
-	color: inherit;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	padding: 8px 12px;
-	background-color: transparent;
-	border: 2px solid #eee;
-	border-radius: 8px;
-	cursor: pointer;
-	transition: all 0.4s;
-}
-
-.btn:hover {
-	background-color: #777;
-}
-
-footer {
-	font-size: 18px;
-	color: #eee;
-	background-color: #333333bb;
-	/* background-color: #333333; */
-	width: 100%;
-	height: 40px;
-	padding: 0 36px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	position: fixed;
-	left: 0;
-	bottom: 0;
-	z-index: 99;
-}
-
-.aurthor a:link {
-	color: inherit;
-}
-
+/* ================================Printing Page=========================== */
 @media print {
 	body {
-		background: repeating-conic-gradient(#ccc 0% 25%, #fff 0% 50%) 50% / 20px
-			20px;
+		background: repeating-conic-gradient(#ccc 0% 25%, #fff 0% 50%) 50% / 2rem
+			2rem;
 	}
 
 	body * {
-		visibility: hidden;
+		visibility: hidden !important;
 	}
 
 	.mainContainer,
@@ -281,18 +320,74 @@ footer {
 	}
 
 	.mainContainer {
-		background: none;
-		padding: 0px !important;
+		background: none !important;
+		padding: 0 !important;
 		overflow: visible !important;
+		box-shadow: none !important;
 	}
 
 	.utilityBox,
-	header,
-	footer {
+	.header,
+	.footer {
 		display: none !important;
 	}
 
 	@page {
-		padding: 15px;
+		padding: 1.5rem;
+	}
+}
+
+/* ================================Media Query============================= */
+/* 
+	************Screens Width************
+		- screen: 1080px	= 67.5em;
+		- screen: 940px		= 58.75em;
+		- screen: 560px		= 35em;
+*/
+@media only screen and (max-width: 67.5em) {
+	html {
+		font-size: 53.125%;
+	}
+
+	.mainContainer {
+		max-width: 60vw;
+	}
+}
+
+@media only screen and (max-width: 58.75em) {
+	.menuBtn {
+		display: flex !important;
+		margin: 0 0 0 auto;
+		align-self: center;
+	}
+	.mainContainer {
+		max-width: 100vw;
+	}
+
+	.utilityBox {
+		max-width: 60vw;
+		transform: translate(calc(100% + 5rem), -50%);
+		transition: all 0.6s ease-in-out;
+	}
+
+	.show.utilityBox {
+		transform: translate(0, -50%);
+	}
+}
+
+@media only screen and (max-width: 35em) {
+	html {
+		font-size: 46.875%;
+	}
+	.utilityBox {
+		max-width: 80vw;
+	}
+
+	.show.utilityBox {
+		transform: translate(2rem, -50%);
+	}
+
+	.utilityBox .btn {
+		grid-column: 1 / -1;
 	}
 }
