--- a/src/main/dev_abhi/assets/resources/styles/sass/abstracts/_variables.scss
+++ b/src/main/dev_abhi/assets/resources/styles/sass/abstracts/_variables.scss
@@ -1,28 +1,64 @@
+// :root {
 // COLORS
+$primary-color: #667eea;
+$primary-color-light: #8598ee;
+$primary-color-dark: #5265bb;
 
-$primary-color: #55c57a;
-$primary-color-light: #7ed56f;
-$primary-color-dark: #28b485;
+$secondary-color: #764ba2;
+$secondary-color-light: #916fb5;
+$secondary-color-dark: #5e3c82;
 
-$secondary-color-light: #ffb900;
-$secondary-color-dark: #ff7730;
+$tertiary-color: #9ae6b4;
 
-$tertiary-color-light: #2998ff;
-$tertiary-color-dark: #5643fa;
-
-$color-gray-light-1: #f7f7f7;
-$color-gray-light-2: #eee;
-$color-gray-dark: #777;
-$color-gray-dark-2: #999;
-$color-gray-dark-3: #333;
 $color-white: #fff;
-$color-black: #000;
+$color-white-1: #eee;
+$color-white-2: #f5f5f5;
+$color-white-3: #ccc;
+
+$color-bg-dark: #000;
+$color-bg-dark-1: #1e1e2f;
+$color-bg-dark-2: #2a2a40;
+
+$color-gray: #333;
+$color-gray-1: #555;
+$color-gray-2: #999;
+
+// TINTS-SHADES
+$primary-color-tint-light: #596572;
+$primary-color-tint-dark: #2c3e50;
+
+// HOVER
+$hover-color-1: #464cb3;
+$hover-color-2: #9398ff;
+$hover-color-3: #9ae6b5dc;
 
 // SHADOW
-$shadow-primary: 0 1.5rem 4rem rgba($color-black, 0.15);
+$shadow-primary: 0 1.5rem 4rem rgba($color-bg-dark, 0.15);
+// }
 
-// GRID
-$grid-width: 120rem;
-$gutter-horizontal: 3rem; // (==column-gap==)
-$gutter-vertical: 8rem; // (==row-gap==)
-$gutter-vertical-small: 6rem; // (==row-gap==)
+/*
+
+$bg-panel: $tertiary-color;
+$text-primary: $color-white;
+$text-muted: $color-gray-2;
+$btn-primary: $primary-color-dark;
+$btn-hover: #646cffaa;
+$btn-hover: #646cff;
+$success-bg: #9ae6b4;
+
+2)  #5a67d8;
+3) #764ba2;
+4)  #2c3e50;
+5)  #1e1e2f;
+6) #fff;
+7) #eee;
+8) #f5f5f5;
+9) #000;
+10) #333, #555, #999;
+11) #4f529ee9;
+11) #4f529ee9;
+12) #9ae6b4;
+13) #9ae6b5dc;
+14) #646cffaa;
+
+*/
