--- a/src/main/dev_abhi/assets/resources/styles/sass/base/_base.scss
+++ b/src/main/dev_abhi/assets/resources/styles/sass/base/_base.scss
@@ -8,38 +8,23 @@
 
 html {
 	font-size: 62.5%; // 1rem = 16px = 10/16 = 62.5%
-	// font-size: 64%;
 	scroll-behavior: smooth;
-
-	/* =====================================================================
-
-  // ===========ITS THE REGULAR TRICK========TYPE @MEDIA QUERY FOR EVERY SECTION/ELEMENTS=========
-  // @media (max-width: 600px) {
-  //   font-size: 50%;
-  // }
-
-  // ===========ITS THE REGULAR @MIXIN TRICK=================
-  // @include respond-phone {
-  //   font-size: 50%;
-  // }
-
-  ===================================================================== */
 
 	// ===========ITS THE @MIXIN FUNCTINALITY TRICK=================
 
 	@include respond(tab-land) {
-		// WIDTH < 1200PX = 75em
-		font-size: 56.25%; // 1rem = 9px; 9/16 = 56.25%;
+		// WIDTH < 1080PX = 67.5em
+		font-size: 53.125%;
 	}
 
 	@include respond(tab-port) {
-		// WIDTH < 900PX = 56.25em
-		font-size: 50%; // 1rem = 8px; 8/16 = 50%;
+		// WIDTH < 940PX = 58.75em
+		// font-size: 50%;
 	}
 
-	@include respond(small-phone) {
-		// WIDTH < 420PX = 26.25em
-		font-size: 40.625%; // 1rem = 6.5px; 6.5/16 = 40.675%;
+	@include respond(phone) {
+		// WIDTH < 560PX = 35em
+		font-size: 46.875%;
 	}
 
 	@include respond(big-desk) {
@@ -50,32 +35,36 @@ html {
 
 body {
 	box-sizing: border-box;
-	padding: 3rem;
-
-	@include respond(tab-land) {
-		padding: 1.5rem;
-	}
-
-	@include respond(phone) {
-		padding: 0rem;
-	}
+	width: auto;
+	height: 100vh;
+	/*
+	background: repeating-linear-gradient(
+		to right,
+		$color-gray-2 10%,
+		$tertiary-color-light 20%
+	); 
+	*/
+	// $primary-color,
+	background: linear-gradient(
+		135deg,
+		$primary-color-tint-light,
+		$primary-color-tint-dark
+	);
+	position: relative;
+	top: 0;
+	left: 0;
+	overflow: hidden;
 }
 
-.section-main {
-	margin-top: 1rem;
-}
-
-::selection {
-	background-color: $primary-color;
-	color: $color-white;
+section {
+	height: 100%;
 }
 
 ::-webkit-scrollbar {
-	height: 0px;
-	width: 5px;
+	width: 0;
+	height: 0;
 }
-::-webkit-scrollbar-thumb {
-	height: 150px;
-	background-color: $primary-color;
-	border-radius: 100px;
+
+::selection {
+	color: $color-white-1 !important;
 }
