--- a/src/main/dev_abhi/assets/resources/styles/sass/layout/_header.scss
+++ b/src/main/dev_abhi/assets/resources/styles/sass/layout/_header.scss
@@ -1,3 +1,26 @@
 // // /* ===== HEADER ===== */
-// .header {
-// }
+
+.header {
+	color: $color-white-1;
+	background: linear-gradient(90deg, $primary-color, $secondary-color);
+	width: 100%;
+	height: 7rem;
+	padding: 1rem 2rem;
+	display: flex;
+	justify-content: start;
+	align-items: center;
+	gap: 1rem;
+
+	position: relative;
+	top: 0;
+	left: 0;
+
+	&__logo {
+		width: 4rem;
+		height: 4rem;
+		mix-blend-mode: color-dodge;
+		will-change: filter;
+		transition: filter 0.3s;
+		animation: logoSpin infinite 9s linear;
+	}
+}
