- Added Js logics for work app properly. - Added upload images, generated more images, download as pdf or print directly. - Added redux slices & store for working with state. - Added static paths for import others type files easily.
- Update necessary jsx.

- Working as a previous traditionl code/functionality.

---

--- a/src/main/dev_abhi/assets/resources/styles/sass/abstracts/_mixins.scss
+++ b/src/main/dev_abhi/assets/resources/styles/sass/abstracts/_mixins.scss
@@ -23,7 +23,7 @@
       - 1080-1800PX  	:   NORMAL STYLE
       - 1800PX+      	:   BIG-DESK
 
-	  	************Screens Width************
+	  	************Screens Max Width************
 		- screen: 1080px	= 67.5em;
 		- screen: 940px		= 58.75em;
 		- screen: 560px		= 35em;
