--- a/src/main/dev_abhi/assets/resources/styles/sass/base/_base.scss
+++ b/src/main/dev_abhi/assets/resources/styles/sass/base/_base.scss
@@ -47,7 +47,7 @@ body {
 	// $primary-color,
 	background: linear-gradient(
 		135deg,
-		$primary-color-tint-light,
+		$color-bg-dark-1,
 		$primary-color-tint-dark
 	);
 	position: relative;
