--- a/src/main/dev_abhi/assets/resources/styles/sass/components/_photoOperationsContainer.scss
+++ b/src/main/dev_abhi/assets/resources/styles/sass/components/_photoOperationsContainer.scss
@@ -66,4 +66,7 @@
 	padding: 0.4rem 1.2rem;
 	border: 0.2rem solid $color-white-1;
 	border-radius: 0.6rem;
+	&::selection {
+		color: $color-bg-dark !important;
+	}
 }
