--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;1,400&display=swap");
+@import url("./main/dev_abhi/assets/vendors/fonts/fonts.css");
 
 /* 
 :root {
