--- a/src/main/dev_abhi/assets/resources/styles/sass/components/_button.scss
+++ b/src/main/dev_abhi/assets/resources/styles/sass/components/_button.scss
@@ -26,7 +26,7 @@
 	}
 
 	&__menu {
-		// display: none;
+		display: none;
 		align-self: center;
 		margin: 0 0 0 auto;
 		/* ================================Media Query================== */
